--- a/ProfSite/Views/Bravecto/index.cshtml
+++ b/ProfSite/Views/Bravecto/index.cshtml
@@ -18,363 +18,10 @@
     <link type="text/css" rel="stylesheet" href="https://fast.fonts.net/cssapi/36b782c8-14a6-42ac-b9e8-820a1ab045fd.css" />
     @Styles.Render("~/Content/css")
     @Scripts.Render("~/bundles/modernizr")
+    <link href="~/Content/bravectohome.css" rel="stylesheet" />
 
     <style type="text/css">
-        body {
-            background: none;
-            background-color: #FFF;
-            position: relative;
-        }
-
-        .btn.btn-default:hover,
-        .btn.btn-default:active,
-        .btn.btn-default {
-            background-color: #f28c00;
-            color: #FFF;
-        }
-
-        .btn .arrow-wrapper {
-            background-color: #ff9400;
-            display: inline-block;
-            margin-right: -20px;
-            margin-left: 5px;
-            width: 40px;
-        }
-
-        .header {
-            margin-bottom: 0;
-            position: relative;
-        }
-
-            .header nav ul li {
-            }
-
-                .header nav ul li a {
-                    color: #394147;
-                }
-
-                    .header nav ul li a:hover {
-                        background: none;
-                    }
-
-            .header .logo-bravecto {
-                margin: 0 0 30px 0;
-            }
-
-            .header #top-nav.nav.nav-pills {
-                position: absolute;
-                right: 15px;
-                top: 70px;
-            }
-
-                .header #top-nav.nav.nav-pills > li > a:hover,
-                .header #top-nav.nav.nav-pills > li > a:focus {
-                    background-color: none;
-                }
-
-        #subheader {
-            min-height: 30px;
-            padding: 5px 0;
-            background-color: #EEE;
-        }
-
-
-            #subheader span {
-                font-size: 16px;
-                font-weight: bold;
-                line-height: 13px;
-                color: #009994;
-            }
-
-            #subheader a.dropdown-toggle {
-                background-color: #009994;
-                color: #fff;
-                display: inline-block;
-                font-size: 1.2em;
-                font-weight: bold;
-                height: 100%;
-                margin: -5px 0;
-                padding: 15px;
-            }
-
-            #subheader .dropdown-menu {
-                left: auto;
-                right: 0;
-                padding: 0;
-            }
-
-            #subheader ul.social-media-list {
-                float: right;
-                margin: 5px 0 0;
-            }
-
-                #subheader ul.social-media-list li {
-                    float: left;
-                    display: inline-block;
-                    padding: 0 2px;
-                }
-
-            #subheader .social-media-col {
-                padding-right: 0;
-            }
-
-        #login-wrapper {
-            padding: 5px 20px;
-            width: 300px;
-            background-color: #009994;
-            color: #FFF;
-        }
-
-            #login-wrapper form button {
-                display: block;
-                margin: 5px 0 0 0;
-                width: 100%;
-                line-height: 32px;
-            }
-
-        .jumbotron {
-            padding: 0;
-            height: 500px;
-            background: url(/Content/img/header.jpg) no-repeat center;
-            background-position: 100% 40%;
-            background-size: cover;
-            color: #FFF;
-        }
-
-            .jumbotron h1 {
-                font-size: 48px;
-                line-height: 1.3em;
-            }
-
-        .jumbo-home-overlay {
-            background-color: rgba(0, 153, 148, 0.5);
-            position: relative;
-            top: 217px;
-        }
-
-            .jumbo-home-overlay .top-jumbo-overlay {
-                padding: 20px 0;
-                margin: 0;
-            }
-
-        .top-jumbo-overlay h3.weeks {
-            color: #fff;
-            font-size: 50px;
-            margin: 0;
-            text-align: center;
-        }
-
-        .bottom-jumbo-overlay {
-            border-top: 1px solid #fff;
-            padding: 20px 0;
-            margin: 25px 25px 0 25px;
-        }
-
-        .marketing-row {
-            text-align: center;
-            margin-top: 100px;
-            margin-bottom: 50px;
-        }
-
-            .marketing-row p {
-                font-size: 18px;
-            }
-
-            .marketing-row img {
-                display: inline-block;
-            }
-
-            .marketing-row h2 {
-                font-family: 28px;
-            }
-
-                .marketing-row h2.support {
-                    color: #0098d8;
-                }
-
-                .marketing-row h2.innovation {
-                    color: #512178;
-                }
-
-                .marketing-row h2.adherence {
-                    color: #dd042b;
-                }
-
-        .full-container {
-            text-align: center;
-            color: #FFF;
-            background-color: #009994;
-            padding: 40px 0;
-        }
-
-            .full-container h2 {
-                font-size: 36px;
-            }
-
-            .full-container p {
-                font-size: 18px;
-            }
-
-        .video-wrapper {
-            height: 850px;
-            background-color: rgba(0, 0, 0, 0.4);
-            background: url(/Content/img/video.jpg) no-repeat center;
-            background-size: cover;
-        }
-
-        .static-section {
-            margin-top: 10px;
-            color: #FFF;
-            text-align: center;
-            height: 350px;
-        }
-
-            .static-section.support {
-                background: url(/Content/img/support.jpg) no-repeat center;
-                background-size: 100% auto;
-            }
-
-            .static-section.innovation {
-                background: url(/Content/img/innovation.jpg) no-repeat center;
-                background-size: 100% auto;
-            }
-
-            .static-section.adherence {
-                background: url(/Content/img/adherence.jpg) no-repeat center;
-                background-size: 100% auto;
-            }
-
-            .static-section div.static-overlay {
-                padding: 20px 0;
-                margin-top: 247px;
-            }
-
-                .static-section div.static-overlay.bgblue {
-                    background-color: rgba(0, 152, 216, 0.6);
-                }
-
-                .static-section div.static-overlay.bgpurple {
-                    background-color: rgba(81, 33, 120, 0.6);
-                }
-
-                .static-section div.static-overlay.bgred {
-                    background-color: rgba(221, 4, 43, 0.6);
-                }
-
-        .static-body {
-            padding-top: 30px;
-            padding-bottom: 20px;
-            text-align: center;
-        }
-
-            .static-body a {
-                color: #f28c00;
-                font-weight: bold;
-            }
-
-            .static-body p {
-                font-size: 18px;
-            }
-
-        .bottom-nav {
-            float: right;
-            margin: 20px 0;
-        }
-
-            .bottom-nav li {
-                display: inline-block;
-                position: relative;
-            }
-
-        footer .bottom-nav li a {
-            color: #394147;
-            font-size: 16px;
-            padding: 10px 15px;
-            text-transform: uppercase;
-        }
-
-        .green {
-            /*color:#009994;*/
-        }
-
-        .blue {
-            color: #0098d8;
-        }
-
-        .orange {
-            color: #f28c00;
-        }
-
-        .purple {
-            color: #512178;
-        }
-
-        .red {
-            color: #dd042b;
-        }
-
-        #side-nav {
-            position: fixed;
-            top: 250px;
-            right: 0;
-            background-color: rgba(255, 255, 255, 0.8);
-            width: 50px;
-        }
-
-            #side-nav ul.nav {
-                margin-left: 10px;
-            }
-
-                #side-nav ul.nav li {
-                    margin: 10px 0;
-                }
-
-                    #side-nav ul.nav li > a {
-                        background-color: #f28c00;
-                        border-radius: 50%;
-                        height: 15px;
-                        width: 15px;
-                        padding:11px;
-                        display: inline-block;
-                        text-decoration: none;
-                        vertical-align: middle;
-                        -webkit-transform: translateZ(0);
-                        -moz-transform: translateZ(0);
-                        -ms-transform: translateZ(0);
-                        -o-transform: translateZ(0);
-                        transform: translateZ(0);
-                        box-shadow: 0 0 1px rgba(0, 0, 0, 0);
-                        -webkit-backface-visibility: hidden;
-                        -moz-backface-visibility: hidden;
-                        backface-visibility: hidden;
-                        -moz-osx-font-smoothing: grayscale;
-                        -webkit-transition-duration: 0.3s;
-                        -moz-transition-duration: 0.3s;
-                        -o-transition-duration: 0.3s;
-                        transition-duration: 0.3s;
-                        -webkit-transition-property: transform;
-                        -moz-transition-property: transform;
-                        -o-transition-property: transform;
-                        transition-property: transform;
-                    }
-
-                        #side-nav ul.nav li a:hover {
-                            text-decoration: none;
-                        }
-
-                    #side-nav ul.nav li.active a {
-                        background-color: rgba(0, 153, 148, 0.8);
-                        height: 18px;
-                        width: 18px;
-                    }
-
-                    #side-nav ul.nav li a:hover, #side-nav ul li a:focus, #side-nav ul li a:active {
-                        -webkit-transform: scale(1.1);
-                        -moz-transform: scale(1.1);
-                        -ms-transform: scale(1.1);
-                        -o-transform: scale(1.1);
-                        transform: scale(1.1);
-                    }
+        
     </style>
 
 </head>
@@ -473,7 +120,7 @@
                 <div class="jumbo-home-overlay">
                     <div class="row top-jumbo-overlay">
                         <div class="col-md-3">
-                            <img src="http://placehold.it/200x150" />
+                            <img src="~/Content/img/flipclock.png" class="flipclock" />
                             <h3 class="weeks">WEEKS</h3>
                         </div>
                         <div class="col-md-9">
@@ -656,7 +303,7 @@
         $(document).ready(function () {
             $('.dropdown-toggle').dropdown();
 
-            $('.dropdown-menu input, .dropdown-menu label, .dropdown-menu button').click(function (e) {
+            $('.dropdown-menu input, .dropdown-menu label, .dropdown-menu button, #login-wrapper').click(function (e) {
                 e.stopPropagation();
             });
             $('body').scrollspy({ target: '#side-nav' });
