--- a/ProfSite/Views/Bravecto/index.cshtml
+++ b/ProfSite/Views/Bravecto/index.cshtml
@@ -19,11 +19,6 @@
     @Styles.Render("~/Content/css")
     @Scripts.Render("~/bundles/modernizr")
     <link href="~/Content/bravectohome.css" rel="stylesheet" />
-
-    <style type="text/css">
-        
-    </style>
-
 </head>
 <body>
     <div id="side-nav">
@@ -47,7 +42,7 @@
         <div class="header clearfix">
             <nav>
                 <ul id="top-nav" class="nav nav-pills">
-                    <li role="presentation"><a href="#">ABOUT US</a></li>
+                    <li role="presentation"><a href="/bravecto/about-us">ABOUT US</a></li>
                     <li role="presentation"><a href="#">CONTACT US</a></li>
                 </ul>
             </nav>
