--- a/ProfSite/Views/Bravecto/about-us.cshtml
+++ b/ProfSite/Views/Bravecto/about-us.cshtml
@@ -4,7 +4,7 @@
 }
 
 <div class="container">
-    <div class="row aboutusheaderrow">
+    <div class="row simpleheaderrow">
         <h2>ABOUT US</h2>
     </div>
 </div>
