--- a/ProfSite/Views/Shared/_LayoutBravecto.cshtml
+++ b/ProfSite/Views/Shared/_LayoutBravecto.cshtml
@@ -26,6 +26,31 @@
         <div class="header clearfix">
             <nav>
                 <ul id="top-nav" class="nav nav-pills">
+                    <li>
+                        <a href="/bravecto/support">
+                            Support
+                        </a>
+                    </li>
+                    <li>
+                        <a href="/bravecto/innovation">
+                            Innovation
+                        </a>
+                    </li>
+                    <li>
+                        <a href="/bravecto/adherence">
+                            Adherence
+                        </a>
+                    </li>
+                    <li>
+                        <a href="/bravecto/resources">
+                            Resources
+                        </a>
+                    </li>
+                    <li class="rightborder">
+                        <a href="/bravecto/products">
+                            Products
+                        </a>
+                    </li>
                     <li role="presentation"><a href="/bravecto/about-us">ABOUT US</a></li>
                     <li role="presentation"><a href="#">CONTACT US</a></li>
                 </ul>
