--- a/ProfSite/Views/Bravecto/twitter.cshtml
+++ b/ProfSite/Views/Bravecto/twitter.cshtml
@@ -11,10 +11,44 @@
 <div class="container">
     <div class="row">
         <div class="col-md-8">
+            <ul class="nav nav-tabs social-tabs twitter">
+                <li role="presentation" class="active"><a href="#feed">NEWSFEED</a></li>
+                <li role="presentation"><a href="#tweet">TWEET</a></li>
+            </ul>
+            <div class="tab-content">
+                <div role="tabpanel" class="tab-pane active" id="feed">
+                    <div class="social-container withtabs twitter">
+                        <h2>
+                            <img src="~/Content/img/twitter-icon-lg.png" />
+                            @@Model
+                        </h2>
+                        <div class="social-content">
 
+                        </div>
+                        <a class="btn btn-default" href="https://www.twitter.com/@Model" target="_blank">
+                            VIEW FULL TIMELINE
+                            <span class="arrow-wrapper"><i class="icon icon-arrow-right"></i></span>
+                        </a>
+                    </div>
+                </div>
+                <div role="tabpanel" class="tab-pane" id="tweet">
+                    <div class="social-container withtabs twitter">
+                    </div>
+                </div>
+            </div>
         </div>
         <div class="col-md-4">
-
+            <h3>LATEST SOCIAL CONTENT</h3>
         </div>
     </div>
 </div>
+@section scripts {
+    <script type="text/javascript">
+        $(document).ready(function () {
+            $('.nav-tabs a').click(function (e) {
+                e.preventDefault()
+                $(this).tab('show')
+            })
+        });
+    </script>
+}
