--- a/ProfSite/Views/Shared/_LayoutBravecto.cshtml
+++ b/ProfSite/Views/Shared/_LayoutBravecto.cshtml
@@ -133,6 +133,7 @@
             </ul>
         </div>
     </footer>
-   @RenderSection("scripts", false)
+    @Scripts.Render("~/bundles/jquery", "~/bundles/bootstrap")
+    @RenderSection("scripts", false)
 </body>
 </html>
